--- a/pom.xml
+++ b/pom.xml
@@ -164,26 +164,40 @@
                         </configuration>
                     </plugin>
                     <plugin>
-                        <groupId>io.fabric8</groupId>
-                        <artifactId>docker-maven-plugin</artifactId>
-                        <version>0.39.0</version>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.0.0</version>
                         <executions>
                             <execution>
-                                <id>build-image</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>build</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>push-image</id>
                                 <phase>deploy</phase>
                                 <goals>
-                                    <goal>push</goal>
+                                    <goal>exec</goal>
                                 </goals>
                                 <configuration>
-                                    <pushRegistry>${docker.registry}</pushRegistry>
-                                    <retries>20</retries>
+                                    <executable>docker</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                    <arguments>
+                                        <argument>build</argument>
+                                        <argument>--rm</argument>
+                                        <argument>--no-cache</argument>
+                                        <argument>-t</argument>
+                                        <argument>${docker.name}</argument>
+                                        <argument>.</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>docker</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                    <arguments>
+                                        <argument>push</argument>
+                                        <argument>${docker.name}</argument>
+                                    </arguments>
                                 </configuration>
                             </execution>
                         </executions>
