--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 logging.file.path=./config/logs
 server.port=18081
+
+#ph-config.cookie=/Volumes/132XXXX3776-9/docker/ph-download/cookies.txt
+#ph-config.download=/Volumes/132XXXX3776-9/PT/auto
